--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,19 @@
-@import url(http://fonts.googleapis.com/css?family=Glegoo);
-
-html {
-  background: #222;
-  color: #fff;
-  font-family: 'Glegoo', serif;
-}
-
-blockquote {
+body blockquote {
   position: relative;
-  margin: auto;
-  width: 100%;
+  margin-left:30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 95%;
   font-size: 48px;
   line-height: 56px;
   padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 20px;
+  padding-top: 20px;
   border-left: 2px solid #fff;
 }
 
-blockquote span {
+body blockquote span {
   display: block;
   text-align: right;
   font-size: 24px;
@@ -25,12 +22,34 @@ blockquote span {
   text-transform: uppercase;
 }
 
-blockquote.tweetText:hover {
-  opacity: 0.5;
+blockquote:before {
+display: block;
+content: "\201C";
+font-size: 80px;
+position: absolute;
+left: 0px;
+top: 15px;
+color: #7a7a7a;
+}
+
+blockquote img{
+  display: block;
+  position: absolute;
+  top: 25px;
+  left: -10px;
+  padding-top: 20px;
+}
+
+body a blockquote {
+  color:#7A7A7A;
+}
+
+body blockquote.tweetText:hover {
+  opacity: 0.8;
   transition: opacity 0.2s ease;
 }
 
-blockquote.tweetText .tweet-quote {
+body blockquote.tweetText .tweet-quote {
   position: absolute;
   top: 50%;
   left: 50%;
