added some more text to headline and added a by line

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+#headline{
+  margin-bottom: 0px;
+}
+
+#byLine p{
+  font-size:12px;
+}
+
 body blockquote {
   position: relative;
   margin-left:30px;
